# drones

./: README.md
AvoidancePy/.catkin_tools/profiles/default/: devel_collisions.txt
AvoidancePy/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
AvoidancePy/devel/lib/avoidance/: avoidance_system.py  histogram2d.py  map_visualizer.py  vfh2d_planner.py
AvoidancePy/devel/lib/pkgconfig/: avoidance.pc
AvoidancePy/logs/avoidance/: build.cmake.000.log.stderr
AvoidancePy/src/avoidance/: CMakeLists.txt
Mapping/mapBresenham/devel/: .catkin
Mapping/mapBresenham/src/BresenhamMapping/: CMakeLists.txt
Mapping/mapBresenham/src/BresenhamMapping/src/: GridMapping.cpp  Map.cpp  VoxelVisualizer.cpp
Mapping/mapProbaBresenham/devel/: .catkin
Mapping/mapProbaBresenham/src/ProbabilityBresenham/: CMakeLists.txt
Mapping/mapping/devel/: env.sh  local_setup.bash  setup.sh  setup.zsh
Mapping/mapping/logs/mapping/: build.check.000.log.stderr
Mapping/territoryMapping/devel/: .catkin  local_setup.sh  setup.sh
Mapping/territoryMapping/src/territoryMap/: CMakeLists.txt  package.xml
Mapping/territoryProbabilityMapping/devel/: .catkin  local_setup.sh  setup.sh
Mapping/territoryProbabilityMapping/src/territoryProbability/: CMakeLists.txt
avoidance/VFH/devel/: .catkin
avoidance/VFH/src/VFH/: CMakeLists.txt  package.xml
avoidance/VFH/src/VFH/include/: Avoidance.h  FlightCommander.hpp  Histogram.h
avoidance/VFH/src/VFH/src/: Avoidance.cpp  FlightCommander.cpp  FlightWithAvoidanceNode.cpp  Histogram.cpp
height-controller/: PID-height-controller.py
mapping/.catkin_tools/profiles/default/: devel_collisions.txt
mapping/devel/: .catkin  _setup_util.py  local_setup.sh  local_setup.zsh  setup.bash
mapping/devel/.private/catkin_tools_prebuild/: .catkin
mapping/devel/lib/pkgconfig/: mapping.pc
mapping/logs/mapping/: build.cmake.000.log.stderr
mapping/src/mapping/: CMakeLists.txt
mapping/src/mapping/src/: mapping_node.cpp
mappingCpp/devel/: local_setup.sh
mappingCpp/devel/lib/pkgconfig/: mappingCpp.pc
mappingCpp/src/mappingCpp/: CMakeLists.txt  package.xml
mappingCpp/src/mappingCpp/include/: Map.h
mappingCpp/src/mappingCpp/src/: GridMapping.cpp  VoxelVisualizer.cpp  mappingNode.cpp
mappingCppSimple/devel/: .catkin  .rosinstall
mappingCppSimple/devel/lib/mappingCpp/: mappingCpp
pitch-PID-controller/: pitch-PID-controller.py
task5/devel/: .catkin  .rosinstall  local_setup.sh
task5/src/uav_controller/: CMakeLists.txt  README.md  package.xml
task5/src/uav_controller/examples/: simple_flight_example.cpp
task5/src/uav_controller/include/: uav_controller.hpp
task5/src/uav_controller/src/: rotationTransform.cpp  uav_circle_fly_example.cpp  uav_controller.cpp  uav_controller_node.cpp
uav-simulator/: constants.py  controller.py  main.py  mathModel.py  simulator.py
uav-simulator/scripts/: plotter.py  sendMessageExample.py  vizualizer.py
visualNavigation/devel/: .catkin  .rosinstall  local_setup.sh
visualNavigation/src/optical_flow/: CMakeLists.txt
(+53 files in other folders)
